--- a/gateway/package.json
+++ b/gateway/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^4.7.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "redis": "^4.5.1"
   }
