--- a/gateway/package.json
+++ b/gateway/package.json
@@ -10,6 +10,7 @@
   "author": "raferdev@outlook.com",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.10",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "axios": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
