--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,21 +1,27 @@
 {
   "name": "gateway",
-  "version": "1.0.0",
   "type": "module",
+  "version": "3.0.0",
   "description": "This api will communicate with anti-fraud services.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.ts"
   },
   "author": "raferdev@outlook.com",
   "license": "MIT",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },  
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.10",
     "joi": "^17.7.0",
+    "nodemon": "^2.0.20",
     "prisma": "^4.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
@@ -24,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "redis": "^4.5.1"
   }
 }
