--- a/gateway/tsconfig.json
+++ b/gateway/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
+    "module": "ESNext",
     "moduleResolution": "NodeNext",
-    "target": "ES3",
+    "esModuleInterop": true,
+    "target": "ESNext",
     "sourceMap": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "ts-node": {
+    "esm": true
+  }
 }
