--- a/gateway/package.json
+++ b/gateway/package.json
@@ -12,12 +12,13 @@
   "license": "MIT",
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
-  },  
+  },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.10",
+    "@types/redis": "^4.0.11",
     "joi": "^17.7.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.7.1",
