--- a/ml-service/Dockerfile
+++ b/ml-service/Dockerfile
@@ -1,9 +1,13 @@
-FROM ubuntu
+FROM tensorflow/tensorflow 
 
-RUN
+COPY ./script.py .
 
-RUN pip install pydot
+EXPOSE 5000
 
-RUN sudo apt install graphviz
+RUN apt-get update && apt update
+RUN apt-get -y upgrade && apt -y upgrade
+RUN apt -y install graphviz
+RUN python -m pip install --upgrade pip  
+RUN pip install keras pandas pydot graphviz flask gevent requests pillow flask-expects-json
 
-RUN pip install flask-expects-json
+CMD [ "python", "./script.py" ]
