--- a/gateway/package.json
+++ b/gateway/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts"
+    "start": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && nodemon src/server.ts"
   },
   "author": "raferdev@outlook.com",
   "license": "MIT",
