--- a/gateway/package.json
+++ b/gateway/package.json
@@ -5,7 +5,11 @@
   "description": "This api will communicate with anti-fraud services.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.ts",
+    "build":"tsc && npx prisma generate && npx prisma run deploy",
+    "test:unit":"NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --coverage --testPathPattern=tests/Units",
+    "test:integrate": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --testPathPattern=tests/Integration",
+    "test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
     "start": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && nodemon src/server.ts"
   },
   "author": "raferdev@outlook.com",
@@ -17,8 +21,11 @@
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.10",
     "@types/redis": "^4.0.11",
+    "@types/supertest": "^2.0.12",
+    "dotenv-cli": "^6.0.0",
     "joi": "^17.7.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.7.1",
