--- a/gateway/package.json
+++ b/gateway/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "build":"tsc && npx prisma generate && npx prisma run deploy",
-    "test:unit":"NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --coverage --testPathPattern=tests/Units",
+    "build": "tsc && npx prisma generate && npx prisma run deploy",
+    "test:unit": "NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --coverage --testPathPattern=tests/Units",
     "test:integrate": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --testPathPattern=tests/Integration",
     "test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
     "start": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && nodemon src/server.ts"
@@ -18,6 +18,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
