--- a/gateway/package.json
+++ b/gateway/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.7.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.7.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
