feat: new integration test of redis db. fix: using disconnect to close communication with the databases

--- a/gateway/.env.test
+++ b/gateway/.env.test
@@ -8,5 +8,5 @@ POSTGRES_DB=cloudwalkdb_test
 POSTGRES_USER=cloudwalk
 POSTGRES_PASSWORD=cloudwalkpass
 REDISPORT=6379
-REDIS_URL=redis://@redis:6379
+REDIS_URL=redis://@localhost:6379
 RULES_SERVER="http://rulesservices:3000/"
