feat: add user table, jwt and bcrypt to improve more security

--- a/gateway/.env.test
+++ b/gateway/.env.test
@@ -4,6 +4,8 @@ POSTGRESPORT=5432
 RULESPORT=3000
 ML_SERVER="http://mlservices:5000/"
 PORT=5050
+SALT_ROUNDS=10
+JWT_SECRET=cloudwalksecret
 POSTGRES_DB=cloudwalkdb_test
 POSTGRES_USER=cloudwalk
 POSTGRES_PASSWORD=cloudwalkpass
