--- a/gateway/package.json
+++ b/gateway/package.json
@@ -20,9 +20,11 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.10",
     "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.12",
@@ -38,10 +40,12 @@
   "dependencies": {
     "@prisma/client": "^4.7.1",
     "axios": "^1.2.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "redis": "^4.5.1"
   }
 }
