feat: add new security with jwt and auth service

--- a/gateway/.env.test
+++ b/gateway/.env.test
@@ -2,7 +2,7 @@ MLPORT=5000
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cloudwalkdb_test?schema=public"
 POSTGRESPORT=5432
 RULESPORT=3000
-ML_SERVER="http://mlservices:5000/"
+ML_SERVER="http://localhost:5000/"
 PORT=5050
 SALT_ROUNDS=10
 JWT_SECRET=cloudwalksecret
