feat: new config env file. feat: New variable INTERN_TOKEN on gateway and ml_service communication.

--- a/gateway/.env.test
+++ b/gateway/.env.test
@@ -4,6 +4,7 @@ POSTGRESPORT=5432
 RULESPORT=3000
 ML_SERVER="http://localhost:5000/"
 PORT=5050
+MODE=TEST
 SALT_ROUNDS=10
 JWT_SECRET=cloudwalksecret
 POSTGRES_DB=cloudwalkdb_test
