--- a/gateway/.env.test
+++ b/gateway/.env.test
@@ -1,15 +1,17 @@
 MLPORT=5000
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cloudwalkdb_test?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cloudwalkdb?schema=public"
 POSTGRESPORT=5432
 RULESPORT=3000
 ML_SERVER="http://localhost:5000/"
 PORT=5050
-MODE=TEST
+MODE=PROD
+PORTGAT=5050
 SALT_ROUNDS=10
 JWT_SECRET=cloudwalksecret
-POSTGRES_DB=cloudwalkdb_test
+INTERN_TOKEN=cloudwalk_pass
+POSTGRES_DB=cloudwalkdb
 POSTGRES_USER=cloudwalk
 POSTGRES_PASSWORD=cloudwalkpass
 REDISPORT=6379
 REDIS_URL=redis://@localhost:6379
-RULES_SERVER="http://rulesservices:3000/"
+RULES_SERVER="http://localhost:3000/"
