feat: new ml-service integration test.feat: new route test to ml-service.

--- a/gateway/.env.test
+++ b/gateway/.env.test
@@ -4,7 +4,7 @@ POSTGRESPORT=5432
 RULESPORT=3000
 ML_SERVER="http://localhost:5000/"
 PORT=5050
-MODE=PROD
+MODE=TEST
 PORTGAT=5050
 SALT_ROUNDS=10
 JWT_SECRET=cloudwalksecret
