--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
     container_name: rulesservices
     build: ./rules-service
     restart: always
+    environment:
+      - INTERN_TOKEN=$INTERN_TOKEN
     expose:
       - $RULESPORT
     depends_on:
