--- a/rules-service/Dockerfile
+++ b/rules-service/Dockerfile
@@ -1,10 +1,11 @@
-FROM ruby
+FROM ruby:3.1.3
 RUN apt-get update -qq && apt-get install -y nodejs 
 RUN gem update --system
 
 COPY . .
 ENV INTERN_TOKEN=cloudwalk_pass
 RUN bundle install
+RUN rails generate model Postbodies --migration=false
 RUN rails db:migrate
 RUN rails db:seed
 
