feat: new method with two python files on ml-services to moore accurate decisions and faster. feat: start using separate file to docker-compose.test

--- a/ml-service/Dockerfile
+++ b/ml-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM tensorflow/tensorflow 
 
-COPY ./script.py .
+COPY . .
 
 EXPOSE 5000
 
@@ -9,5 +9,6 @@ RUN apt-get -y upgrade && apt -y upgrade
 RUN apt -y install graphviz
 RUN python -m pip install --upgrade pip  
 RUN pip install keras pandas pydot graphviz flask gevent requests pillow flask-expects-json
+RUN python model.py
 
 CMD [ "python", "./script.py" ]
