--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - mlservices
       - rulesservices
       - redis
+    entrypoint: "./wait-for-it.sh mlservices:5000"
     networks:
       - cloudwalk_network
 
@@ -25,6 +26,10 @@ services:
       - mlservices.env
     expose:
       - $MLPORT
+    depends_on:
+      - redis
+      - postgres
+      - rulesservices
     networks:
       - cloudwalk_network
   
@@ -61,8 +66,6 @@ services:
       - $REDISPORT
     env_file:
       - .env
-    depends_on:
-      - mlservices
     networks:
       - cloudwalk_network
 
