feat: new bash script to gateway can wait for machine learning container. feat: separating docker-compose files.

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,8 +1,8 @@
 MLPORT=5000
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cloudwalkdb?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/cloudwalkdb_test?schema=public"
 POSTGRESPORT=5432
 RULESPORT=3000
-ML_SERVER="http://localhost:5000/"
+ML_SERVER="http://mlservices:5000/"
 PORT=5050
 MODE=TEST
 PORTGAT=5050
