--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:16-alpine
 
-RUN apk add --no-cache libc6-compat
+RUN apk add --no-cache libc6-compat bash
 RUN apk add --update --no-cache openssl1.1-compat
 
 WORKDIR /app
 
 COPY . .
 
-RUN npm ci
+RUN chmod +x wait-for-it.sh
 
-CMD ["npm", "start"]
+RUN npm ci
