feat: new docker schemma organization. feat: npm run prod, with all setup to run docker on production environment. fix: add unique constraint on user_id of prisma schema. feat: add constShell file on gateway config to show differents styles on shell terminal. fix: change user.user on credentialsSerivce to user.id (gateway). feat: add waitress to run ml-service api on production environment, and add os.getenv constants on the top of the file. fix: change some rules-service config to more secure and can exec production mode.

--- a/ml-service/docker/Dockerfile
+++ b/ml-service/docker/Dockerfile
@@ -1,14 +1,12 @@
-FROM tensorflow/tensorflow 
+FROM tensorflow/tensorflow:2.11.0
 
 COPY . .
-
-EXPOSE 5000
 
 RUN apt-get update && apt update
 RUN apt-get -y upgrade && apt -y upgrade
 RUN apt -y install graphviz
 RUN python -m pip install --upgrade pip  
-RUN pip install keras pandas pydot graphviz flask gevent requests pillow flask-expects-json
+RUN pip install keras pandas pydot graphviz flask gevent requests pillow flask-expects-json waitress
 RUN python model.py
 
 CMD [ "python", "./script.py" ]
