--- a/rules-service/config/database.yml
+++ b/rules-service/config/database.yml
@@ -5,12 +5,12 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: db/devdb
 
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: db/testdb
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: db/clouddb
