--- a/gateway/docker/production/Dockerfile.prod
+++ b/gateway/docker/production/Dockerfile.prod
@@ -1,13 +1,10 @@
 FROM node:16-alpine AS deps
 
-RUN apk add --no-cache libc6-compat
-
 WORKDIR /app
 
 COPY package.json package-lock.json ./
 
 RUN npm ci
-
 
 FROM node:16-alpine as builder
 
@@ -15,19 +12,23 @@ WORKDIR /app
 
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-COPY .env.production.sample .env.production
+
 RUN npm run build
 
 FROM node:16-alpine as runner
 
-RUN apk add --no-cache libc6-compat
-RUN apk add --update --no-cache openssl1.1-compat
-
 WORKDIR /app
 
-COPY --from=deps ../src .
-COPY --from=deps ../tsconfig.json .
-COPY --from=deps ../package.json .
-COPY --from=deps ../package-lock.json .
+RUN apk add --no-cache libc6-compat
+RUN apk add --update --no-cache openssl1.1-compat
+RUN adduser -S cloud -u 1001
+RUN addgroup -g 1001 -S walk
 
-RUN npm ci && npm run build
+COPY --from=builder --chown=cloud:walk ./app/dist/src .
+COPY --chown=cloud:walk ./prisma .
+COPY --chown=cloud:walk package-lock.json .
+COPY --chown=cloud:walk package.json .
+
+RUN npm i --omit=dev
+
+CMD [ "npm","start" ]
