--- a/gateway/package.json
+++ b/gateway/package.json
@@ -5,31 +5,32 @@
   "description": "This api will communicate with anti-fraud services.",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "build": "tsc && npx prisma migrate deploy",
+    "start:dev": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && nodemon src/server.js",
+    "build": "tsc",
     "test:unit": "NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --coverage --testPathPattern=tests/Units",
     "test:integrate": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --verbose  --testPathPattern=tests/Integration",
-    "test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
-    "start": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && nodemon src/server.ts"
+    "start:test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
+    "start": "npx prisma migrate deploy && node config/seed.js && node server.js",
+    "prod":"docker-compose -f docker/production/docker-compose.prod.yml up",
+    "dev":"docker-compose -f ./docker/docker-compose.dev.yml",
+    "test":"docker-compomse -f ./docker/docker-compose.test.yml",
+    "seed":"node config/seed.js"
   },
   "author": "raferdev@outlook.com",
   "license": "MIT",
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node src/config/seed.ts"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.10",
-    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.12",
     "dotenv-cli": "^6.0.0",
-    "joi": "^17.7.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.7.1",
     "supertest": "^6.3.3",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "joi": "^17.7.0",
     "axios": "^1.2.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
