--- a/rules-service/docker/Dockerfile.dev
+++ b/rules-service/docker/Dockerfile.dev
@@ -1,11 +1,12 @@
 FROM ruby:3.1.3
+
 RUN apt-get update -qq && apt-get install -y nodejs 
 RUN gem update --system
+
+WORKDIR /app
 
 COPY . .
 
 RUN bundle install
 RUN rails db:migrate
 RUN rails db:seed
-
-CMD ["rails", "server","-b", "0.0.0.0"]
