feat: new test command. fix: change factory test and repository to create jwt using the user.id. feat: All tests are passing.

--- a/gateway/package.json
+++ b/gateway/package.json
@@ -8,12 +8,14 @@
     "start:dev": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && nodemon src/server.js",
     "build": "tsc",
     "test:unit": "NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --coverage --testPathPattern=tests/Units",
-    "test:integrate": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --verbose  --testPathPattern=tests/Integration",
-    "start:test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
+    "test:integrate": "npx prisma migrate dev && npx prisma db seed && jest -i --verbose  --testPathPattern=tests/Integration",
     "start": "npx prisma migrate deploy && node config/seed.js && node server.js",
     "prod":"docker-compose -f docker/production/docker-compose.prod.yml up",
-    "dev":"docker-compose -f ./docker/docker-compose.dev.yml",
-    "test":"docker-compomse -f ./docker/docker-compose.test.yml",
+    "dev":"docker-compose -f docker/development/docker-compose.dev.yml up",
+    "test":"docker-compose -f docker/test/docker-compose.test.yml up --exit-code-from gateway",
+    "prod:build":"docker-compose -f docker/production/docker-compose.prod.yml up --build",
+    "dev:build":"docker-compose -f docker/development/docker-compose.dev.yml up --build",
+    "test:build":"docker-compose -f docker/test/docker-compose.test.yml up --build --exit-code-from gateway",
     "seed":"node config/seed.js"
   },
   "author": "raferdev@outlook.com",
