--- a/gateway/docker/test/Dockerfile.test
+++ b/gateway/docker/test/Dockerfile.test
@@ -1,10 +1,19 @@
-FROM node:16-alpine
+FROM node:16-alpine AS deps
+
+WORKDIR /app
+
+COPY package.json package-lock.json ./
+
+RUN npm ci
+
+FROM node:16-alpine as runner
 
 RUN apk add --no-cache libc6-compat bash
 RUN apk add --update --no-cache openssl1.1-compat
 
 WORKDIR /app
 
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
 RUN chmod +x wait-for-it.sh
