--- a/gateway/docker/test/docker-compose.test.yml
+++ b/gateway/docker/test/docker-compose.test.yml
@@ -1,15 +1,28 @@
+
 services:
   gateway:
-    container_name: gateway
-    build: Dockerfile.test
+    container_name: gateway_test
     restart: always
-    env_file:
-      - .env.test
+    environment:
+      - SALT_ROUNDS=$SALT_ROUNDS
+      - PORTGAT=$PORTGAT
+      - JWT_SECRET=$JWT_SECRET
+      - INTERN_TOKEN=$INTERN_TOKEN
+      - DATABASE_URL=$DATABASE_URL
+      - REDIS_URL=$REDIS_URL
+      - ML_SERVER=$ML_SERVER
+      - RULES_SERVER=$RULES_SERVER
+      - MODE=$MODE
+      - ADMIN=$ADMIN
+      - PASSWORD=$PASSWORD
+    build:
+      context: ../../
+      dockerfile: docker/test/Dockerfile.test
     expose:
       - $PORTGAT
     ports:
       - $PORTGAT:$PORTGAT
-    entrypoint: ["./wait-for-it.sh","-t","180", "mlservices:5000","--","npm","run", "test:integrate"]
+    entrypoint: ["./wait-for-it.sh","-t","180", "mlservices_test:5000","--","npm","run", "test:integrate"]
     depends_on:
       - postgres
       - mlservices
@@ -19,11 +32,17 @@ services:
       - cloudwalk_network
 
   mlservices:
-    container_name: mlservices
-    build: ./ml-service
+    container_name: mlservices_test
+    build:
+      context: ../../../ml-service
+      dockerfile: ./docker/Dockerfile
     restart: always
-    env_file:
-      - mlservices.env
+    environment:
+      - INTERN_TOKEN=$INTERN_TOKEN
+      - MLPORT=$MLPORT
+      - MLHOST=$MLHOST
+      - MLDEBUG=$MLDEBUG
+      - MODE=$MODE
     expose:
       - $MLPORT
     depends_on:
@@ -34,13 +53,20 @@ services:
       - cloudwalk_network
   
   rulesservices:
-    container_name: rulesservices
-    build: ./rules-service
+    container_name: rulesservices_test
+    build:
+      context: ../../../rules-service
+      dockerfile: ./docker/Dockerfile.test
     restart: always
-    env_file:
-      - rules.env
+    environment:
+      - INTERN_TOKEN=$INTERN_TOKEN
+      - RULESPORT=$RULESPORT
+      - RAILS_ENV=$RAILS_ENV
+      - RAILS_LOG_TO_STDOUT=$RAILS_LOG_TO_STDOUT
+      - RAILS_SERVE_STATIC_FILES=$RAILS_SERVE_STATIC_FILES
     expose:
       - $RULESPORT
+    entrypoint: /bin/sh -c "rails db:migrate && rails db:seed && rails server -b $RAILS_HOST"
     depends_on:
       - postgres
       - redis
@@ -48,26 +74,38 @@ services:
       - cloudwalk_network
 
   postgres:
-    container_name: postgres
-    image: postgres
+    container_name: postgres_test
+    image: postgres:12.13-alpine3.17
     expose:
       - $POSTGRESPORT
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_DB=$POSTGRES_DB
     depends_on:
       - redis
+    volumes:
+      - posgres
     networks:
       - cloudwalk_network
 
   redis:
-    container_name: redis
-    image: redis
+    container_name: redis_test
+    image: redis:7.0.7
     expose:
       - $REDISPORT
-    env_file:
-      - .env
+    environment:
+      - REDIS_USER=$REDIS_USER
+      - REDIS_PASSWORD=$REDIS_PASSWORD
+      - REDIS_DB=$REDIS_DB
+    volumes:
+      - redis
     networks:
       - cloudwalk_network
 
+volumes:
+  redis:
+  postgres:
+  
 networks:
   cloudwalk_network:
