--- a/gateway/package.json
+++ b/gateway/package.json
@@ -12,7 +12,7 @@
     "start": "npx prisma migrate deploy && node config/seed.js && node server.js",
     "prod":"docker-compose -f docker/production/docker-compose.prod.yml up",
     "dev":"docker-compose -f docker/development/docker-compose.dev.yml up",
-    "test":"docker-compose -f docker/test/docker-compose.test.yml up --exit-code-from gateway",
+    "test":"docker-compose -f docker/test/docker-compose.test.yml up",
     "prod:build":"docker-compose -f docker/production/docker-compose.prod.yml up --build",
     "dev:build":"docker-compose -f docker/development/docker-compose.dev.yml up --build",
     "test:build":"docker-compose -f docker/test/docker-compose.test.yml up --build --exit-code-from gateway",
