--- a/gateway/docker/production/.env.exemple
+++ b/gateway/docker/production/.env.exemple
@@ -2,19 +2,19 @@
 
 PORTGAT=5050
 SALT_ROUNDS=10
-JWT_SECRET=cloudwalksecret
-INTERN_TOKEN=cloudwalk_pass
+JWT_SECRET=payprosecret
+INTERN_TOKEN=paypro_pass
 ADMIN='212313'
-PASSWORD='CLOUDWALK'
+PASSWORD='paypro'
 MODE=production
 
 # Postgres
 
-DATABASE_URL="postgresql://cloudwalk:cloudwalkpass@postgres:5432/cloudwalkdb?schema=public"
+DATABASE_URL="postgresql://paypro:paypropass@postgres:5432/payprodb?schema=public"
 POSTGRESPORT=5432
-POSTGRES_DB=cloudwalkdb
-POSTGRES_USER=cloudwalk
-POSTGRES_PASSWORD=cloudwalkpass
+POSTGRES_DB=payprodb
+POSTGRES_USER=paypro
+POSTGRES_PASSWORD=paypropass
 
 # Redis
 
