--- a/gateway/docker/production/docker-compose.prod.yml
+++ b/gateway/docker/production/docker-compose.prod.yml
@@ -27,7 +27,7 @@ services:
       - rulesservices
       - redis
     networks:
-      - cloudwalk_network
+      - paypro_network
 
   mlservices:
     container_name: mlservices
@@ -48,7 +48,7 @@ services:
       - postgres
       - rulesservices
     networks:
-      - cloudwalk_network
+      - paypro_network
   
   rulesservices:
     container_name: rulesservices
@@ -69,7 +69,7 @@ services:
       - postgres
       - redis
     networks:
-      - cloudwalk_network
+      - paypro_network
 
   postgres:
     container_name: postgres
@@ -85,7 +85,7 @@ services:
     volumes:
       - posgres
     networks:
-      - cloudwalk_network
+      - paypro_network
 
   redis:
     container_name: redis
@@ -99,11 +99,11 @@ services:
     volumes:
       - redis
     networks:
-      - cloudwalk_network
+      - paypro_network
 
 volumes:
   redis:
   postgres:
   
 networks:
-  cloudwalk_network:
+  paypro_network:
