fix: new exemple .env test

--- a/gateway/docker/test/.env.exemple
+++ b/gateway/docker/test/.env.exemple
@@ -2,19 +2,19 @@
 
 PORTGAT=5050
 SALT_ROUNDS=10
-JWT_SECRET=cloudwalksecret_test
-INTERN_TOKEN=cloudwalk_pass_test
+JWT_SECRET=payprosecret_test
+INTERN_TOKEN=paypro_pass_test
 ADMIN='212313'
-PASSWORD='CLOUDWALK'
+PASSWORD='paypro'
 MODE=TEST
 
 # Postgres
 
-DATABASE_URL="postgresql://cloudwalk_test:cloudwalkpass_test@postgres_test:5432/cloudwalkdb_test?schema=public"
+DATABASE_URL="postgresql://paypro_test:paypropass_test@postgres_test:5432/payprodb_test?schema=public"
 POSTGRESPORT=5432
-POSTGRES_DB=cloudwalkdb_test
-POSTGRES_USER=cloudwalk_test
-POSTGRES_PASSWORD=cloudwalkpass_test
+POSTGRES_DB=payprodb_test
+POSTGRES_USER=paypro_test
+POSTGRES_PASSWORD=paypropass_test
 
 # Redis
 
